tests/error/undefined_impl/main.adept3

pragma => adept("3.0")

#[foreign]
func printf(format ptr<char>, ...) int

func main {
    actAnything::act(10)
}

trait Act<$T> {
    func act(self $T) void
}

#[public]
impl Act<$T> actAnyth {
    func act(self $T) {
        printf(c"act anything...\n")
    }
}

